--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,362 @@
     <string name="app_name">ECommerceAPP</string>
     <string name="open">ECommerceAPP</string>
     <string name="close">ECommerceAPP</string>
+    <string name="testScroll">
+
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XMLv
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+I am trying to hide my tool bar when i scroll my text and image with content , here i use scrollView for getting scroll content when ,when i scroll content up how to hide tool bar please any one tell me how to get
+
+here my XMl code
+
+content_main.XML
+
+    </string>
 </resources>
